--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Back-End FinTrax Apps",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "dev": "NODE_ENV=development nodemon server.js",
-    "deploy": "NODE_ENV=production"
+    "start": "SET NODE_ENV=production node server.js",
+    "dev": "nodemon server.js",
+    "deploy": "SET NODE_ENV=production"
   },
   "author": "",
   "license": "ISC",
