--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "dev": "NODE_ENV=development nodemon server.js",
-    "deploy": "NODE_ENV=production"
+    "deploy": "npx vercel@latest deploy --prod"
   },
   "author": "",
   "license": "ISC",
